projects/vb6parse/snapshots/parsers/cst/objects/call/procedure_call_no_arguments.snap
---
source: projects/vb6parse/tests/objects/call.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: InitializeRandomDNA
        - kind: Newline
          text: "\n"
